# review_practice_python

./: .gitignore  Makefile  README.md  docker-compose.yml
application/: main.py  pyproject.toml
application/template/: example.py  example.txt  review.txt
application/tests/: test_example.py  test_review.txt
containers/python/: Dockerfile
